<resources>
    <string name="app_name">Gurukul</string>
    <string name="back_button">back button</string>
    <string name="app_logo">app logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_icon">Email Icon</string>
    <string name="email">email</string>
    <string name="name_icon">name icon</string>
    <string name="name">name</string>
    <string name="school_icon">school icon</string>
    <string name="lock_icon">lock icon</string>
    <string name="password">password</string>
    <string name="continue_">Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="graduation_year">Grad year:</string>
    <string name="branch">Branch:</string>
    <string name="log_in">Log In</string>
    <string name="log_in_as_guest">Log In As Guest</string>
    <string name="or">OR</string>
    <string name="go_to_log_in">Go to Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="semester">Semester:</string>
    <string name="forum">Forum</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>