<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gurukul.view.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_forum"
            app:destination="@id/navigation_forum" />
    </fragment>

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.example.gurukul.view.fragments.ForumFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.gurukul.view.fragments.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>