<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bone_white"
    tools:context=".view.activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_back_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_vector_back_arrow"
        android:background="@color/bone_white"
        android:contentDescription="@string/back_button" />

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="-90dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/gurukul_logo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:textColor="@color/text_color_primary"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-64dp"
        android:fontFamily="@font/montserrat_bold"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_person"
                android:contentDescription="@string/name_icon" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="textPersonName"
                tools:text="Abhijit Puri"
                android:textSize="16sp"
                android:hint="@string/name"
                android:textColorHint="@color/text_color_secondary"
                android:textColor="@color/text_color_primary"
                android:layout_gravity="center"
                android:backgroundTint="@color/text_color_secondary"
                android:autofillHints="name" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_school"
                android:contentDescription="@string/school_icon" />

            <EditText
                android:id="@+id/et_prn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="text"
                android:textSize="16sp"
                tools:text="2020BTECS00082"
                android:hint="prn"
                android:textColorHint="@color/text_color_secondary"
                android:textColor="@color/text_color_primary"
                android:layout_gravity="center"
                android:backgroundTint="@color/text_color_secondary"
                />

        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_vector_email"
            android:contentDescription="@string/email_icon" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:inputType="textEmailAddress"
            tools:text="puriabhijit000@gmail.com"
            android:textSize="16sp"
            android:hint="@string/email"
            android:textColorHint="@color/text_color_secondary"
            android:textColor="@color/text_color_primary"
            android:backgroundTint="@color/text_color_secondary"
            android:layout_gravity="center"
            android:autofillHints="emailAddress" />




    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_vector_phone"
                android:contentDescription="@string/school_icon" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="phone"
                android:textSize="16sp"
                tools:text="9623697793"
                android:hint="prn"
                android:textColorHint="@color/text_color_secondary"
                android:textColor="@color/text_color_primary"
                android:layout_gravity="center"
                android:backgroundTint="@color/text_color_secondary"
                />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_vector_lock"
            android:contentDescription="@string/lock_icon" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:text="Password"
            android:hint="@string/password"
            android:textSize="16sp"
            android:textColorHint="@color/text_color_secondary"
            android:inputType="textPassword"
            android:textColor="@color/text_color_primary"
            android:layout_gravity="center"
            android:backgroundTint="@color/text_color_secondary"
            android:autofillHints="password" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/branch"
                android:textSize="16sp"
                android:textColor="@color/text_color_secondary"
                android:fontFamily="@font/montserrat_bold"/>

            <Spinner
                android:id="@+id/spinner_branches"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/text_color_secondary"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/semester"
                android:textSize="16sp"
                android:textColor="@color/text_color_secondary"
                android:fontFamily="@font/montserrat_bold"/>

            <Spinner
                android:id="@+id/spinner_semesters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/text_color_secondary"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/graduation_year"
                android:textColor="@color/text_color_secondary"
                android:fontFamily="@font/montserrat_bold"/>

            <Spinner
                android:id="@+id/spinner_graduation_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/text_color_secondary"
                />

        </LinearLayout>


    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="16dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/continue_"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/text_color_secondary"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/tv_go_to_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/blue"/>

    </LinearLayout>


    </LinearLayout>

</ScrollView>