<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bone_white"
    tools:context=".view.activities.LogInActivity">


    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="-50dp"
        android:src="@drawable/gurukul_logo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="24sp"
        android:textColor="@color/text_color_primary"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-64dp"
        android:fontFamily="@font/montserrat_bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_vector_school"
            android:contentDescription="@string/school_icon" />

        <EditText
            android:id="@+id/et_prn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24sp"
            android:inputType="text"
            tools:text="2020BTECS00082"
            android:hint="prn"
            android:textColorHint="@color/text_color_secondary"
            android:textColor="@color/text_color_primary"
            android:layout_gravity="center"
            android:backgroundTint="@color/text_color_secondary"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_vector_lock"
            android:contentDescription="@string/lock_icon" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24sp"
            tools:text="Password"
            android:hint="@string/password"
            android:textColorHint="@color/text_color_secondary"
            android:inputType="textPassword"
            android:textColor="@color/text_color_primary"
            android:layout_gravity="center"
            android:backgroundTint="@color/text_color_secondary"
            android:autofillHints="password" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/text_color_primary"
        android:gravity="end"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/blue"
        android:text="Log In"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New User?"
            android:textColor="@color/text_color_secondary"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/tv_go_to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/blue"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:background="@color/text_color_secondary"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/text_color_secondary"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:background="@color/text_color_secondary"/>




    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_as_guest"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/log_in_as_guest"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"/>

</LinearLayout>