<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bone_white"
    tools:context=".view.activities.ForgotPassword">

    <ImageButton
        android:id="@+id/btn_back_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_vector_back_arrow"
        android:background="@color/bone_white"
        android:contentDescription="@string/back_button" />

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="-50dp"
        android:src="@drawable/gurukul_logo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password"
        android:textSize="24sp"
        android:textColor="@color/text_color_primary"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-32dp"
        android:fontFamily="@font/montserrat_bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_vector_school"
            android:contentDescription="@string/school_icon" />

        <EditText
            android:id="@+id/et_prn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:inputType="text"
            tools:text="2020BTECS00082"
            android:hint="prn"
            android:textColorHint="@color/text_color_secondary"
            android:textColor="@color/text_color_primary"
            android:layout_gravity="center"
            android:backgroundTint="@color/text_color_secondary"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_vector_email"
            android:contentDescription="@string/email_icon" />


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            tools:text="email"
            android:hint="@string/email"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColorHint="@color/text_color_secondary"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color_primary"
            android:layout_gravity="center"
            android:backgroundTint="@color/text_color_secondary"
            android:autofillHints="password" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="48dp"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/blue"
        android:text="Continue"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"/>

</LinearLayout>