<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activities.GuestLogin">

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/gurukul_logo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="24sp"
        android:textColor="@color/text_color_primary"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-84dp"
        android:fontFamily="@font/montserrat_bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_vector_school"
            android:contentDescription="@string/school_icon" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:inputType="text"
            tools:text="2020BTECS00082"
            android:textSize="16sp"
            android:hint="username"
            android:textColorHint="@color/text_color_secondary"
            android:textColor="@color/text_color_primary"
            android:layout_gravity="center"
            android:backgroundTint="@color/text_color_secondary"
            />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="32dp"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/blue"
        android:text="Log In"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"/>



</LinearLayout>